external-crates/move/crates/move-compiler/tests/move_check/parser/invalid_character.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01001]: invalid character
  ┌─ tests/move_check/parser/invalid_character.move:1:12
  │
1 │ address 0x1~
  │            ^ Unexpected character: '~'
